--- a/gb/23/9/27/n14082428.md
+++ b/gb/23/9/27/n14082428.md
@@ -1,74 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2023三义木雕艺术节 木艺慢活嘉年华热闹登场</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082429-638009-600x400.jpeg" />
 <h6>与会来宾齐祝三义木雕艺术节-木艺慢活嘉年华 成功。（许享富／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年09月27日讯】（大纪元记者陈文敏台湾苗栗报导）为扩大文化产业结合观光效益，“2023<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%89%E4%B9%89.md#1">三义</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%A8%E9%9B%95.md#1">木雕</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E8%8A%82.md#1">艺术节</a>系列活动─木艺慢活<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E5%B9%B4%E5%8D%8E.md#1">嘉年华</a>”活动，县府今年特别敲定双十国庆日的4天连续假期，10月7日至10月10日在三义木雕博物馆前广场、水美商圈盛大登场。</p>
-<p>县府文观局27日举行活动记者会，邀请县长钟东锦、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%89%E4%B9%89.md#1">三义</a>乡长吕明忠等人，体验双人锯木体验，演绎今年“艺气”传承的主题。</p>
-<figure id="attachment_14082432" aria-describedby="caption-attachment-14082432" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082432-638012.jpeg"><img class=" wp-image-14082432" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082432-638012-600x900.jpeg" alt="" width="451" b="677" /></a><figcaption id="caption-attachment-14082432" class="wp-caption-text">三义乡长吕明忠表示三义乡有闻名的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%A8%E9%9B%95.md#1">木雕</a>艺术博物馆、水美艺术商圈的美食、艺术精品，同时与邻近乡镇串联有好山、好农特产品，好民宿。值得假期来享受慢游山城的慢活乐趣。（许享富／大纪元）</figcaption></figure>
+<p>【大纪元2023年09月27日讯】（大纪元记者陈文敏台湾苗栗报导）为扩大文化产业结合观光效益，“2023三义木雕艺术节系列活动─木艺慢活嘉年华”活动，县府今年特别敲定双十国庆日的4天连续假期，10月7日至10月10日在三义木雕博物馆前广场、水美商圈盛大登场。</p>
+<p>县府文观局27日举行活动记者会，邀请县长钟东锦、三义乡长吕明忠等人，体验双人锯木体验，演绎今年“艺气”传承的主题。</p>
+<figure id="attachment_14082432" aria-describedby="caption-attachment-14082432" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082432-638012.jpeg"><img loading="lazy" decoding="async" class=" wp-image-14082432" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082432-638012-600x900.jpeg" alt="" width="451" b="677" /></a><figcaption id="caption-attachment-14082432" class="wp-caption-text">三义乡长吕明忠表示三义乡有闻名的木雕艺术博物馆、水美艺术商圈的美食、艺术精品，同时与邻近乡镇串联有好山、好农特产品，好民宿。值得假期来享受慢游山城的慢活乐趣。（许享富／大纪元）</figcaption></figure>
 <p>钟县长欢迎各界到三义木雕慢城享受慢食、慢活和慢游的乐趣，丰富的文化飨宴一定让人值回票价。文观局副局长黄智群说，依经验连假苗栗的住房率达8成以上，请民众赶紧订房，体验这场以木雕为主题的艺术飨宴。</p>
-<figure id="attachment_14082431" aria-describedby="caption-attachment-14082431" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082431-638011.jpeg"><img class="size-large wp-image-14082431" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082431-638011-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082431" class="wp-caption-text">文观局副局长黄智群表示，今年以“艺气”传承为主题，呼应苗栗三义为木雕的起源地，活动场域跨越三义乡，享受慢城慢活的乐趣，除感受三义木雕艺术之美、水美艺术商圈、胜兴的Rail B ike铁道自行车等， 慢游山城。（许享富／大纪元）</figcaption></figure>
+<figure id="attachment_14082431" aria-describedby="caption-attachment-14082431" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082431-638011.jpeg"><img loading="lazy" decoding="async" class="size-large wp-image-14082431" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082431-638011-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082431" class="wp-caption-text">文观局副局长黄智群表示，今年以“艺气”传承为主题，呼应苗栗三义为木雕的起源地，活动场域跨越三义乡，享受慢城慢活的乐趣，除感受三义木雕艺术之美、水美艺术商圈、胜兴的Rail B ike铁道自行车等， 慢游山城。（许享富／大纪元）</figcaption></figure>
 <p>活动记者会今天11时在县府第一办公大楼大厅，由县长钟东锦率文观局副局长黄智群等团队主持，县议员周玉满、陈碧华、许樱萍、三义乡长吕明忠、苗栗市公所机要秘书詹运喜、台湾木雕协会理事长施士方、三义木雕协会沈培泽和协会干部们、苗栗县观光协会总干事张维哲、三义水美商圈产业发展协会总干事詹芝雯，以及赞助活动经费的台电通霄发电厂副厂长李宗宜和中油台探总处工关组长孙明财等人都热络出席。</p>
 <p>记者会安排三义乡侨成国小陶笛队演奏悠扬乐章，揭开热闹序幕，钟县长特地包一个大红包鼓舞陶笛团队；另外，安排木雕名师许锦昌父子档，以双人锯木方式，呼应今年活动“传承”主题；钟县长、吕乡长、台电和中油等人，也两人一组体验双人锯木的难度。</p>
-<figure id="attachment_14082430" aria-describedby="caption-attachment-14082430" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082430-638010.jpeg"><img class="size-large wp-image-14082430" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082430-638010-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082430" class="wp-caption-text">侨成国小陶笛队悦耳歌声揭开序幕。（许享富／大纪元）</figcaption></figure>
-<p>黄智群表示，今年三义木雕<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E8%8A%82.md#1">艺术节</a>，以“艺气”传承为主题，以艺术之气呼应苗栗三义为木雕的起源地，透过年度盛事三义木雕艺术节庆举办，再次开启最经典的艺文飨宴，活动场域跨越三义乡，在木雕博物馆广场进行的活动包含：木雕大师主题现场创作、假日艺文表演、木质部落市集、亲子木艺DIY、车制文昌笔、减法艺术–陶土切削体验等活动；在神雕村街道有大刀阔斧的“冰雕与电锯”；水美艺术商圈有：竹编手作体验、木工学堂、街头艺人、打卡活动等相关艺文活动，活动也延伸到胜兴的Rail? B ike铁道自行车，欢迎国内外游客踊跃参与，感受三义木雕艺术之美、慢游山城的慢活乐趣。</p>
-<figure id="attachment_14082433" aria-describedby="caption-attachment-14082433" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082433-638013.jpeg"><img class=" wp-image-14082433" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082433-638013-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082433" class="wp-caption-text">许哲源的全家福(台湾红桧)。（许享富／大纪元）</figcaption></figure>
-<figure id="attachment_14082434" aria-describedby="caption-attachment-14082434" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082434-638014.jpeg"><img class="size-large wp-image-14082434" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082434-638014-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082434" class="wp-caption-text">天然文创工作室的精致作品。（许享富／大纪元）</figcaption></figure>
-<figure id="attachment_14082435" aria-describedby="caption-attachment-14082435" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082435-638015.jpeg"><img class=" wp-image-14082435" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082435-638015-600x900.jpeg" alt="" width="451" b="677" /></a><figcaption id="caption-attachment-14082435" class="wp-caption-text">水淹七军威震华夏（台湾亚杉） 黄柏翰作品。（许享富／大纪元）</figcaption></figure>
-<figure id="attachment_14082436" aria-describedby="caption-attachment-14082436" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082436-638017.jpeg"><img class="size-large wp-image-14082436" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082436-638017-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082436" class="wp-caption-text">野单车赖瑞儒 （天然奇木工作室）。（许享富／大纪元）</figcaption></figure>
-<p>县长钟东锦表示，三义木雕节自民国79年举行以来迈入第33年，特别感谢裕隆汽车限期赞助经费和买下部分获奖作品，而企业有责任为地方文化发展贡献己力，未来争取台积电等大公司，加入奥援艺文活动。他说，中秋节连假有白沙屯拱天宫的160周年活动，预期4位总统候选人都会到场，而国庆连假的木艺<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E5%B9%B4%E5%8D%8E.md#1">嘉年华</a>活动，结合木雕、铁道自行车和客家美食，欢迎各界到三义感受与众不同的艺文风情，一定能值回票价。</p>
+<figure id="attachment_14082430" aria-describedby="caption-attachment-14082430" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082430-638010.jpeg"><img loading="lazy" decoding="async" class="size-large wp-image-14082430" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082430-638010-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082430" class="wp-caption-text">侨成国小陶笛队悦耳歌声揭开序幕。（许享富／大纪元）</figcaption></figure>
+<p>黄智群表示，今年三义木雕艺术节，以“艺气”传承为主题，以艺术之气呼应苗栗三义为木雕的起源地，透过年度盛事三义木雕艺术节庆举办，再次开启最经典的艺文飨宴，活动场域跨越三义乡，在木雕博物馆广场进行的活动包含：木雕大师主题现场创作、假日艺文表演、木质部落市集、亲子木艺DIY、车制文昌笔、减法艺术–陶土切削体验等活动；在神雕村街道有大刀阔斧的“冰雕与电锯”；水美艺术商圈有：竹编手作体验、木工学堂、街头艺人、打卡活动等相关艺文活动，活动也延伸到胜兴的Rail? B ike铁道自行车，欢迎国内外游客踊跃参与，感受三义木雕艺术之美、慢游山城的慢活乐趣。</p>
+<figure id="attachment_14082433" aria-describedby="caption-attachment-14082433" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082433-638013.jpeg"><img loading="lazy" decoding="async" class=" wp-image-14082433" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082433-638013-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082433" class="wp-caption-text">许哲源的全家福(台湾红桧)。（许享富／大纪元）</figcaption></figure>
+<figure id="attachment_14082434" aria-describedby="caption-attachment-14082434" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082434-638014.jpeg"><img loading="lazy" decoding="async" class="size-large wp-image-14082434" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082434-638014-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082434" class="wp-caption-text">天然文创工作室的精致作品。（许享富／大纪元）</figcaption></figure>
+<figure id="attachment_14082435" aria-describedby="caption-attachment-14082435" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082435-638015.jpeg"><img loading="lazy" decoding="async" class=" wp-image-14082435" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082435-638015-600x900.jpeg" alt="" width="451" b="677" /></a><figcaption id="caption-attachment-14082435" class="wp-caption-text">水淹七军威震华夏（台湾亚杉） 黄柏翰作品。（许享富／大纪元）</figcaption></figure>
+<figure id="attachment_14082436" aria-describedby="caption-attachment-14082436" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14082436-638017.jpeg"><img loading="lazy" decoding="async" class="size-large wp-image-14082436" src="https://i.epochtimes.com/assets/uploads/2023/09/id14082436-638017-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14082436" class="wp-caption-text">野单车赖瑞儒 （天然奇木工作室）。（许享富／大纪元）</figcaption></figure>
+<p>县长钟东锦表示，三义木雕节自民国79年举行以来迈入第33年，特别感谢裕隆汽车限期赞助经费和买下部分获奖作品，而企业有责任为地方文化发展贡献己力，未来争取台积电等大公司，加入奥援艺文活动。他说，中秋节连假有白沙屯拱天宫的160周年活动，预期4位总统候选人都会到场，而国庆连假的木艺嘉年华活动，结合木雕、铁道自行车和客家美食，欢迎各界到三义感受与众不同的艺文风情，一定能值回票价。</p>
 <p>黄智群表示，7日当天上午11:00祭祀巧圣先师鲁班公揭开序幕，下午1时30分举办社区才艺竞赛，展现三义地方文化特色，下午3时的开幕暨颁奖典礼，将表扬“台湾木雕薪传成就奖”、公布并颁赠奖金与奖杯予“2023台湾国际木雕竞赛”得奖者。此外，当天将有苗栗在地舞蹈团、文化艺术团等丰富的表演活动，为活动现场添增热情活力气氛。</p>
 <p>&nbsp;</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/10/n13294142.md#1">三义木雕艺术节登场    呈现木雕艺术之美</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/7/n13488228.md#1">三义木雕博物馆 修缮后重新开馆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/12/n13843744.md#1">2022三义木雕艺术节 10/15起盛大登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960174.md#1">木情山艺 苗栗县三义木雕协会会员联展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006559.md#1">赖永发木雕薪传展 三义木雕馆展出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/27/n14082342.md#1">欢庆教师节 县长颁奖表扬624位资深优良教师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/27/n14082349.md#1">展现山林原貌 垃圾带下山 就从我做起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081692.md#1">全力辅选林志洁 赖清德畅谈愿景积极争取支持</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081670.md#1">违规记点要牢记 莫等吊扣困生计</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081570.md#1">2023妈祖-缤纷艺阵文化祭 9/28、29通霄慈后宫登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/10/n13294142.md#1">三义木雕艺术节登场    呈现木雕艺术之美</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/7/n13488228.md#1">三义木雕博物馆 修缮后重新开馆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/12/n13843744.md#1">2022三义木雕艺术节 10/15起盛大登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/28/n13960174.md#1">木情山艺 苗栗县三义木雕协会会员联展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/30/n14006559.md#1">赖永发木雕薪传展 三义木雕馆展出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309614.md#1">“洛雁美神有机新品”上市 食农市集活动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309587.md#1">冰箱管理五原则 苗县卫生局关心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309589.md#1">苗栗客转窦客语家庭培力课程 讲客对屋下讲起势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309002.md#1">2024年台产蜂蜜品质评鉴 职人蜂蜜珍稀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309026.md#1">苗栗与德岛签署互惠友好M O U 促进观光经济</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/1/n11293536.md#1" target="_blank">【征文】元正戊：弦高退秦军救郑国后为何拒受重赏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078897.md#1">【未解之谜】魏斯博士（上）看到地球未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075537.md#1">秋分：彼岸日 天地阴阳调和</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064457.md#1">【古道人生】总督早年曾陷死刑 前未婚妻舍命相救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078338.md#1">孔子追求的道与传下的道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081067.md#1">【军事热点】俄军整建制部队有被围歼的危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081872.md#1">【菁英论坛】袁世凯功过 七大改制 两大争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081443.md#1">【环球直击】韩国：朝鲜若使用核武 将终结政权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14079992.md#1">王友群：灵隐寺迎外宾 习到底信什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070676.md#1">燃油车vs混动车 最省油的15款2023年车型</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080447.md#1">【翻墙必看】韩正在美国遇到的惊人一幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080305.md#1">范冰冰任西班牙影展评审 开幕红毯造型成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080342.md#1">为何不上常驻综艺？刘诗诗回应获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081122.md#1">风头盖过发布会新品 刘德华代言华为惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081070.md#1">爱妻刘真过世三年半 辛龙获星友爆最新近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080763.md#1">KINGDOM新专辑封面引争议 销毁7万张重制</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077809.md#1">胆固醇被冤枉了！医师揭心脏病罪魁祸首原来是它</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080133.md#1">如何加速新陈代谢来减肥？ 专家教你三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080741.md#1">为何起床30分钟内别整理床铺？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075597.md#1">最有效抗氧化剂——龙血的4大神奇疗效和禁忌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081463.md#1">专家：全家出国旅行 别犯这个很花钱的错误</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/27/n14082428.htm">2023三义木雕艺术节 木艺慢活嘉年华热闹登场</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/27/n14082428.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/27/n14082428.htm">2023三义木雕艺术节 木艺慢活嘉年华热闹登场</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/27/n14082428.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
